examples/simple-direct/03-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb-operator
  namespace: simple-cheese-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-lb-operator
  template:
    metadata:
      labels:
        name: nginx-lb-operator
    spec:
      serviceAccountName: nginx-lb-operator
      containers:
        - name: nginx-lb-operator
          image: "tuxinvader/nginx-lb-operator:latest"
          imagePullPolicy: "Always"
          volumeMounts:
          - mountPath: /tmp/ansible-operator/runner
            name: runner
      volumes:
        - name: runner
          emptyDir: {}
