examples/simple-direct/10-whatcheese-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatcheese-web
  namespace: simple-cheese-demo
  labels:
    app: whatcheese-web
spec:
  selector:
    matchLabels:
      app: whatcheese-web
  replicas: 3
  template:
    metadata:
      labels:
        app: whatcheese-web
    spec:
      containers:
      - name: whatcheese-web
        image: tuxinvader/whatcheese-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: whatcheese-web
  namespace: simple-cheese-demo
spec:
  selector:
    app: whatcheese-web
  type: NodePort
  #type: ClusterIP
  #clusterIP: None
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
