examples/simple-direct/50-gateway.yaml
apiVersion: lb.nginx.com/v1alpha1
kind: Gateway
metadata:
  name: whatcheese-gw
  namespace: simple-cheese-demo
spec:
  controller: "dev-controller"
  displayName: "Dev Gateway"
  description: "A gateway deployed by Kubernetes"
  certificate: "whatcheese"
  desiredState:
    ingress:
      placement:
        instancerefs:
          - ref: /infrastructure/locations/unspecified/instances/2
      uris:
        'http://*.whatcheese.nginx.demo': {}
        'https://*.whatcheese.nginx.demo': {}
      tls:
        protocols:
          - TLSv1.2
          - TLSv1.3
        preferServerCipher: DISABLED
        sessionCache: SHARED
